ansible/roles/traefik-ingress/files/apple-banana-traefik.yml
---
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"

---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image

---
kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  labels:
    app: banana
spec:
  containers:
    - name: banana-app
      image: hashicorp/http-echo
      args:
        - "-text=banana"

---
kind: Service
apiVersion: v1
metadata:
  name: banana-service
spec:
  selector:
    app: banana
  ports:
    - port: 5678 # Default port for image

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: apple-banana-ingress
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.lude.com`) && Path(`/apple`)
      kind: Rule
      services:
        - name: apple-service
          port: 5678
    - match: Host(`traefik.lude.com`) && Path(`/banana`)
      kind: Rule
      services:
        - name: banana-service
          port: 5678
